force-app/main/default/objects/Budget__c/Budget__c.object-meta.xml
<CustomObject>
    <description>This is the summarised budget header details that goes for approval &amp; is maintained in system for any further progress, tracking or finance integration</description>
    <label>Budget</label>
    <nameField>
        <label>Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>