force-app/main/default/objects/Budget__c/fields/Default_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Rate_Type__c</fullName>
    <label>Default Project Rate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Research Collaboration</fullName>
            </value>
            <value>
                <fullName>Research Consultancy (Collaborative)</fullName>
            </value>
            <value>
                <fullName>Research Consultancy (Commercial)</fullName>
            </value>
            <value>
                <fullName>Non-Research Consultancy</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Grant with Overheads</fullName>
            </value>
            <value>
                <fullName>Scholarship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>