force-app/main/default/objects/Budget__c/fields/I_RS_Actual_Overhead__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Actual_Overhead__c</fullName>
    <inlineHelpText>The percentage overhead applied to researcher salary to cover La Trobe infrastructure, facilities and services.</inlineHelpText>
    <label>Actual Salary Overhead</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>