force-app/main/default/objects/Budget__c/fields/I_RS_Approved__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This box is ticked when the budget has been approved by the school.</inlineHelpText>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>