force-app/main/default/objects/Budget__c/fields/I_RS_Base_Salary__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Base_Salary__c</fullName>
    <inlineHelpText>Lead Chief&apos;s Investigator&apos;s Base Salary</inlineHelpText>
    <label>Base Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>