force-app/main/default/objects/Budget__c/fields/I_RS_Budget_Calculator_Label_UI_Locked__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Budget_Calculator_Label_UI_Locked__c</fullName>
    <description>Message to show on Budget Calculator when, due to config&apos;d rules, the data can on longer be modified</description>
    <formula>$Setup.Budget_Calculator_Label_UI_Locked__c.I_RS_Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Calculator Label - UI Locked</label>
    <type>Text</type>
</CustomField>