force-app/main/default/objects/Budget__c/fields/I_RS_Cash_Contributions_by_La_Trobe__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Cash_Contributions_by_La_Trobe__c</fullName>
    <label>La Trobe Internal Cash Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>