force-app/main/default/objects/Budget__c/fields/I_RS_Charge_Out_Rate_Comment__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Charge_Out_Rate_Comment__c</fullName>
    <formula>IF(
TEXT(Default_Rate_Type__c) &lt;&gt; TEXT(I_RS_Actual_Rate_Type__c),
&quot;• The Salary Rate types are not the same&quot; &amp; BR(), &quot;&quot;)+

IF(
I_RS_Profit__c &gt; I_RS_Actual_Profit__c,
&quot;• The Actual Profit is less than the Default Profit&quot; &amp; BR(),&quot;&quot;) +

IF(
I_RS_Overhead__c &gt; I_RS_Actual_Overhead__c,

&quot;• The Actual Overhead is less than the Default Overhead&quot; &amp; BR(),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Provide reasons why default charge out rates have been adjusted</inlineHelpText>
    <label>Charge Out Rate Comment</label>
    <type>Text</type>
</CustomField>