force-app/main/default/objects/Budget__c/fields/I_RS_Daily_On_Costs__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Daily_On_Costs__c</fullName>
    <inlineHelpText>On-costs include payroll tax, workcover and superannuation</inlineHelpText>
    <label>Daily On-Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>