force-app/main/default/objects/Budget__c/fields/I_RS_Daily_Overheads__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Daily_Overheads__c</fullName>
    <inlineHelpText>Daily Overheads are indirect costs, for example legal, insurance, electricity costs, etc.</inlineHelpText>
    <label>Daily Overheads</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>