force-app/main/default/objects/Budget__c/fields/I_RS_Daily_Profits__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Daily_Profits__c</fullName>
    <label>Daily Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>