force-app/main/default/objects/Budget__c/fields/I_RS_Daily_Salary__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Daily_Salary__c</fullName>
    <inlineHelpText>Daily Charge Out Rate for the Funder</inlineHelpText>
    <label>Daily Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>