force-app/main/default/objects/Budget__c/fields/I_RS_Description__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>