force-app/main/default/objects/Budget__c/fields/I_RS_External_Body_Cash_Contributions__c.field-meta.xml
<CustomField>
    <fullName>I_RS_External_Body_Cash_Contributions__c</fullName>
    <label>External Funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>