force-app/main/default/objects/Budget__c/fields/I_RS_External_Body_In_Kind_Contributions__c.field-meta.xml
<CustomField>
    <fullName>I_RS_External_Body_In_Kind_Contributions__c</fullName>
    <label>External In-Kind Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>