force-app/main/default/objects/Budget__c/fields/I_RS_Funding_Body__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funding_Body__c</fullName>
    <formula>I_RS_Project_Proposal__r.I_RS_Account_Organisation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Body</label>
    <type>Text</type>
</CustomField>