force-app/main/default/objects/Budget__c/fields/I_RS_Funding_Body_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funding_Body_Id__c</fullName>
    <description>Record Id of Budget -&gt; Project Proposal -&gt; Organisation</description>
    <formula>I_RS_Project_Proposal__r.I_RS_Account_Organisation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Body Id</label>
    <type>Text</type>
</CustomField>