force-app/main/default/objects/Budget__c/fields/I_RS_In_kind_LTU_Non_Salary__c.field-meta.xml
<CustomField>
    <fullName>I_RS_In_kind_LTU_Non_Salary__c</fullName>
    <label>La Trobe In-Kind Non-Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>