force-app/main/default/objects/Budget__c/fields/I_RS_IP_Position__c.field-meta.xml
<CustomField>
    <fullName>I_RS_IP_Position__c</fullName>
    <formula>TEXT ( I_RS_Project_Proposal__r.I_RS_IP_Position__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IP Position</label>
    <type>Text</type>
</CustomField>