force-app/main/default/objects/Budget__c/fields/I_RS_La_Trobe_External_Cash_Contribution__c.field-meta.xml
<CustomField>
    <fullName>I_RS_La_Trobe_External_Cash_Contribution__c</fullName>
    <label>La Trobe External Cash Contribution</label>
    <summarizedField>Budget_Line_Item__c.I_RS_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Budget_Line_Item__c.I_RS_Category__c</field>
        <operation>equals</operation>
        <value>Cash External</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Budget_Line_Item__c.I_RS_In_Kind__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Budget_Line_Item__c.I_RS_Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>