force-app/main/default/objects/Budget__c/fields/I_RS_La_Trobe_On_Costs__c.field-meta.xml
<CustomField>
    <fullName>I_RS_La_Trobe_On_Costs__c</fullName>
    <inlineHelpText>Includes payroll tax, workcover and superannuation.</inlineHelpText>
    <label>La Trobe On-Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>