force-app/main/default/objects/Budget__c/fields/I_RS_La_Trobe_Total__c.field-meta.xml
<CustomField>
    <fullName>I_RS_La_Trobe_Total__c</fullName>
    <description>LTU total: internal cash, external cash plus in-kind.</description>
    <inlineHelpText>LTU total: internal cash, external cash plus in-kind.</inlineHelpText>
    <label>La Trobe Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>