force-app/main/default/objects/Budget__c/fields/I_RS_Lead_Chief_Investigator__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Lead_Chief_Investigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Example Rate For</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Budgets</relationshipLabel>
    <relationshipName>Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>