force-app/main/default/objects/Budget__c/fields/I_RS_Line_Item_Permission_Delete__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Line_Item_Permission_Delete__c</fullName>
    <description>Whether deleting this Budget&apos;s Line Items - whether via the Calculator or standard means - is permitted</description>
    <formula>/*For Researchers, only Drafts can be deleted*/
(
TEXT(I_RS_Status__c) = &apos;Draft&apos; &amp;&amp;
$User.I_RS_Is_Researcher_User__c = &apos;1&apos;
)

||

/*Non-researchers have full access*/
$User.I_RS_Is_Researcher_User__c = &apos;0&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Permission - Delete</label>
    <type>Checkbox</type>
</CustomField>