force-app/main/default/objects/Budget__c/fields/I_RS_Line_Item_Permission_Save__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Line_Item_Permission_Save__c</fullName>
    <description>Whether saving Line Items under this Budget (inserts or updates) is allowed</description>
    <formula>/*Currently the same as delete, so we can piggy-back that*/

I_RS_Line_Item_Permission_Delete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Permission - Save</label>
    <type>Checkbox</type>
</CustomField>