force-app/main/default/objects/Budget__c/fields/I_RS_Locked__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in a validation rule. This field is set to true if the status of the Budget is set to value that is not Draft</description>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>