force-app/main/default/objects/Budget__c/fields/I_RS_Maximum_Allowed_On_Cost__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Maximum_Allowed_On_Cost__c</fullName>
    <inlineHelpText>Maximum allowable on-cost rate set by Funder.</inlineHelpText>
    <label>Maximum Allowed On-Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>