force-app/main/default/objects/Budget__c/fields/I_RS_Min_Years_To_Display_In_Calculator__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Min_Years_To_Display_In_Calculator__c</fullName>
    <description>Default/minimum number of many year column sets to display on grid</description>
    <formula>IF(
I_RS_Project_Proposal__r.I_RS_Project_Duration_In_Years__c &lt; 7, 
I_RS_Project_Proposal__r.I_RS_Project_Duration_In_Years__c,
7
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min Years To Display In Calculator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>