force-app/main/default/objects/Budget__c/fields/I_RS_Non_Salary_Overhead_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Non_Salary_Overhead_Multiplier__c</fullName>
    <description>Used in Budget Calculator to add Actual Non-Salary Overhead to Non-Salary Items</description>
    <formula>(I_RS_Actual_Non_Salary_Overhead__c) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non-Salary Overhead Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>