force-app/main/default/objects/Budget__c/fields/I_RS_Non_Salary_Rate_Flag__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Non_Salary_Rate_Flag__c</fullName>
    <formula>IF(
 I_RS_Actual_Non_Salary_Overhead__c  = Default_Non_salary_Overhead__c,

IMAGE(
LEFT($Api.Partner_Server_URL_260,
FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)
)+
&quot;resource/GreenCheck&quot;, &quot;Same&quot;, 15,15
),

IMAGE(
LEFT($Api.Partner_Server_URL_260,
FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)
)+
&quot;resource/AmberNotice&quot;, &quot;Different&quot;, 15,15
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays Green if Default and Actual values are the same, else will display Amber.</inlineHelpText>
    <label>Non-Salary Rate Flag</label>
    <type>Text</type>
</CustomField>