force-app/main/default/objects/Budget__c/fields/I_RS_On_Cost__c.field-meta.xml
<CustomField>
    <fullName>I_RS_On_Cost__c</fullName>
    <label>On-Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>