force-app/main/default/objects/Budget__c/fields/I_RS_Overheads__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Overheads__c</fullName>
    <label>Overheads</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>