force-app/main/default/objects/Budget__c/fields/I_RS_Project_Proposal__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Proposal__c</fullName>
    <label>Project Proposal</label>
    <referenceTo>Project_Proposal__c</referenceTo>
    <relationshipLabel>Budgets</relationshipLabel>
    <relationshipName>Budgets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>