force-app/main/default/objects/Budget__c/fields/I_RS_Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Start_Date__c</fullName>
    <formula>I_RS_Project_Proposal__r.I_RS_Project_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>