force-app/main/default/objects/Budget__c/fields/I_RS_Salary_Rate_Flag__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Salary_Rate_Flag__c</fullName>
    <formula>IF(
TEXT(Default_Rate_Type__c) =  TEXT(I_RS_Actual_Rate_Type__c) &amp;&amp;
I_RS_Profit__c &lt;=  I_RS_Actual_Profit__c &amp;&amp;
I_RS_Overhead__c &lt;=  I_RS_Actual_Overhead__c,

IMAGE(
LEFT($Api.Partner_Server_URL_260,
FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)
)+
&quot;resource/GreenCheck&quot;, &quot;Same&quot;, 15,15
),

IMAGE(
LEFT($Api.Partner_Server_URL_260,
FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)
)+
&quot;resource/RedNotice&quot;, &quot;Different&quot;, 15,15
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays Green if Default and Actual values are the same, else will display Red.</inlineHelpText>
    <label>Charge Out Rate Flag</label>
    <type>Text</type>
</CustomField>