force-app/main/default/objects/Budget__c/fields/I_RS_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Status__c</fullName>
    <inlineHelpText>Draft: I&apos;m working on it; Active: This is the actual budget for the project; Superseded: Previous active versions.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>