force-app/main/default/objects/Budget__c/fields/I_RS_Submitted__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This box is ticked when this budget record reflects what is submitted to the funder on the proposal.</inlineHelpText>
    <label>Submitted</label>
    <type>Checkbox</type>
</CustomField>