force-app/main/default/objects/Budget__c/fields/I_RS_Total_Daily_Charge_Out_Rate_Formula__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Total_Daily_Charge_Out_Rate_Formula__c</fullName>
    <formula>I_RS_Daily_Salary__c +  I_RS_Daily_On_Costs__c +   I_RS_Daily_Overheads__c  +   I_RS_Daily_Profits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Daily Charge Out Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>