force-app/main/default/objects/Budget__c/fields/I_RS_Year__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Year__c</fullName>
    <description>We need to break down the income by year for reporting purposes (Date Year Only)</description>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>