force-app/main/default/objects/Budget__c/fields/Total_Requested__c.field-meta.xml
<CustomField>
    <fullName>Total_Requested__c</fullName>
    <description>Total requested from LTU and external including both in-kind and cash</description>
    <inlineHelpText>Total of LTU and external including both in-kind and cash</inlineHelpText>
    <label>Project Total</label>
    <summarizedField>Budget_Line_Item__c.I_RS_Amount__c</summarizedField>
    <summaryForeignKey>Budget_Line_Item__c.I_RS_Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>