force-app/main/default/objects/Budget__c/validationRules/Budget_Must_Be_Draft_By_Default.validationRule-meta.xml
<ValidationRule>
    <fullName>Budget_Must_Be_Draft_By_Default</fullName>
    <active>true</active>
    <description>When inserting a Budget, the status must be Draft. Only in updates can it be anything else.</description>
    <errorConditionFormula>ISNEW() &amp;&amp; TEXT(I_RS_Status__c) != &quot;Draft&quot;</errorConditionFormula>
    <errorDisplayField>I_RS_Status__c</errorDisplayField>
    <errorMessage>A new Budget must start with a Status of &apos;Draft&apos;.</errorMessage>
</ValidationRule>