force-app/main/default/objects/Budget__c/validationRules/Required_Fields_on_Project_Proposal.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_on_Project_Proposal</fullName>
    <active>true</active>
    <description>Several fields are required on Project Proposal before starting a Budget. In most cases they&apos;ll be provided before the user tries to start a Budget, but this rule is a final checker.</description>
    <errorConditionFormula>ISBLANK(TEXT(I_RS_Project_Proposal__r.I_RS_Project_Start_Date__c)) ||
ISBLANK(TEXT(I_RS_Project_Proposal__r.I_RS_Project_End_Date__c)) ||
ISBLANK(TEXT(I_RS_Project_Proposal__r.I_RS_IP_Position__c)) ||

/*If Project Proposal IP position is as below, publishing rights is not required. Otherwise, it is.*/
(
TEXT(I_RS_Project_Proposal__r.I_RS_IP_Position__c) &lt;&gt; &apos;Owned by other organisation – no rights to La Trobe to use&apos; &amp;&amp; ISBLANK(TEXT(I_RS_Project_Proposal__r.I_RS_Publishing_Rights__c))
)</errorConditionFormula>
    <errorMessage>The following fields are required on Project/Project Proposal: Start Date, End Date, IP Position, Publishing Rights</errorMessage>
</ValidationRule>