force-app/main/default/objects/Budget__c/validationRules/Status_is_not_Draft.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_is_not_Draft</fullName>
    <active>true</active>
    <errorConditionFormula>I_RS_Locked__c = TRUE &amp;&amp;
CONTAINS($Profile.Name, &quot;Community&quot;)</errorConditionFormula>
    <errorMessage>You can no longer modify this record. Contact your System Administrator to learn more.</errorMessage>
</ValidationRule>