force-app/main/default/objects/Budget__c/validationRules/Submitted_Checkbox_is_True.validationRule-meta.xml
<ValidationRule>
    <fullName>Submitted_Checkbox_is_True</fullName>
    <active>true</active>
    <description>The approved checkbox is true but StatuS is not active or superseded</description>
    <errorConditionFormula>AND(
I_RS_Submitted__c  = True,
TEXT(I_RS_Status__c) &lt;&gt; &quot;Active&quot;,
TEXT(I_RS_Status__c) &lt;&gt; &quot;Superseded&quot;
)</errorConditionFormula>
    <errorDisplayField>I_RS_Submitted__c</errorDisplayField>
    <errorMessage>Please set the Status field to Active or Superseded to proceed.</errorMessage>
</ValidationRule>