force-app/main/default/objects/Budget__c/listViews/All_Budgets.listView-meta.xml
<ListView>
    <fullName>All_Budgets</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Project_Proposal__c</columns>
    <columns>I_RS_Status__c</columns>
    <columns>I_RS_Amount__c</columns>
    <columns>I_RS_Project_Start_Date__c</columns>
    <columns>I_RS_Project_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Budgets</label>
</ListView>